[gd_scene load_steps=21 format=2]

[ext_resource path="res://scene/main/InitWorld.gd" type="Script" id=1]
[ext_resource path="res://scene/gui/MainGUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/main/MainScene.gd" type="Script" id=3]
[ext_resource path="res://scene/main/PCMove.gd" type="Script" id=4]
[ext_resource path="res://scene/main/EnemyAI.gd" type="Script" id=5]
[ext_resource path="res://scene/main/Schedule.gd" type="Script" id=6]
[ext_resource path="res://scene/main/DungeonBoard.gd" type="Script" id=7]
[ext_resource path="res://scene/main/RemoveObject.gd" type="Script" id=8]
[ext_resource path="res://scene/main/PCAttack.gd" type="Script" id=9]
[ext_resource path="res://scene/main/DungeonSize.gd" type="Script" id=10]
[ext_resource path="res://scene/main/EnemyAS.gd" type="Script" id=11]
[ext_resource path="res://scene/main/PauseManager.gd" type="Script" id=12]
[ext_resource path="res://resource/audio/Effects/gameover.wav" type="AudioStream" id=13]
[ext_resource path="res://resource/audio/Effects/sword_hit.wav" type="AudioStream" id=14]
[ext_resource path="res://resource/audio/Effects/enemy_death.wav" type="AudioStream" id=15]
[ext_resource path="res://scene/main/EnemyAttack.gd" type="Script" id=16]
[ext_resource path="res://scene/main/FOV.gd" type="Script" id=17]
[ext_resource path="res://scene/main/ItemManager.gd" type="Script" id=18]
[ext_resource path="res://scene/main/SaveLoadManager.gd" type="Script" id=19]
[ext_resource path="res://scene/main/BackgroundMusic.gd" type="Script" id=20]

[node name="MainScene" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
scale = Vector2( 0.5, 0.5 )
transform = Transform2D( 0.5, 0, 0, 0.5, 0, 0 )

[node name="MainGUI" parent="CanvasLayer" instance=ExtResource( 2 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 780.0
margin_bottom = 580.0

[node name="InitWorld" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="PCMove" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PCAttack" type="Node2D" parent="PCMove"]
script = ExtResource( 9 )

[node name="FOV" type="Node2D" parent="PCMove"]
z_index = 5
script = ExtResource( 17 )

[node name="Schedule" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="EnemyAI" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="EnemyAS" type="Node2D" parent="EnemyAI"]
script = ExtResource( 11 )

[node name="EnemyAttack" type="Node2D" parent="EnemyAI"]
script = ExtResource( 16 )

[node name="DungeonBoard" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="RemoveObject" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="ItemManager" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="SaveLoadManager" type="Node2D" parent="."]
script = ExtResource( 19 )

[node name="DungeonSize" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="PauseManager" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 12 )

[node name="Audio" type="Node" parent="."]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="Audio"]
volume_db = -10.0
script = ExtResource( 20 )

[node name="AttackSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 14 )

[node name="PlayerDeath" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 13 )

[node name="EnemyDeath" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 15 )
